# Zin_os

./: .gitignore  README.md  commands_workon.txt  cross-compiler.sh
.github/workflows/: cmake.yml  codeql.yml
os/: CMakeLists.txt  Makefile  boot.s  builder.bat  builder.sh  gdt.cpp  interrupts.cpp  interrupts.h  interrupts.s  kernel.cpp  kernle.cpp  lenker.ld  linker.ld  loader.s  port.cpp
os/hedders/: gdt.h  interrupts.h  outP.h  port.h  type.h
